# server-equality

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  compression example  result-noise.txt  result-sam-1-1.txt  result-sam-1-2.txt  result-sam-100-10.txt  result.txt  results  sample bitlength less than polymod  sample multi query  sample1  sample2 (exceeded noise budget)  sample4  sample5  sample6  sample7  sample8  sample9  server-equality
src/: client.cpp  cwc.cpp  main.cpp  server.cpp  test_bench.cpp  utils.cpp
src/includes/: client.h  cwc.h  server.h  test_bench.h  utils.h
