cmake_minimum_required(VERSION 3.13)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_PREFIX_PATH /home/suni/Documents/Research/fhe/seal-lib)
set(CMAKE_BUILD_TYPE Release)
project(server-equality)
add_executable(server-equality src/main.cpp src/client.cpp src/server.cpp src/utils.cpp src/test_bench.cpp)
find_package(SEAL 4.0 REQUIRED)
target_link_libraries(server-equality SEAL::seal)
target_include_directories(server-equality PUBLIC src/includes)
